--- a/index.html
+++ b/index.html
@@ -404,9 +404,9 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="http://portal.arhabs.com/images/project/project001.jpg" class="img-fluid" alt="">
+              <img src="assets/img/project001.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="http://portal.arhabs.com/images/project/project001.jpg" data-gallery="portfolioGallery"
+                <a href="img/project001.jpg" data-gallery="portfolioGallery"
                   class="portfolio-lightbox" title="Web Application"><i class="bx bx-plus"></i></a>
 
               </div>
@@ -415,9 +415,9 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
-              <img src="http://portal.arhabs.com/images/project/project002.png" class="img-fluid" alt="">
+              <img src="assets/img/project002.png" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="http://portal.arhabs.com/images/project/project002.png" data-gallery="portfolioGallery"
+                <a href="img/project002.png" data-gallery="portfolioGallery"
                   class="portfolio-lightbox" title="Web Application"><i class="bx bx-plus"></i></a>
 
               </div>
@@ -426,9 +426,9 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="http://portal.arhabs.com/images/project/project003.png" class="img-fluid" alt="">
+              <img src="assets/img/project003.png" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="http://portal.arhabs.com/images/project/project003.png" data-gallery="portfolioGallery"
+                <a href="img/project003.png" data-gallery="portfolioGallery"
                   class="portfolio-lightbox" title="Web Application"><i class="bx bx-plus"></i></a>
 
               </div>
@@ -437,9 +437,9 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
-              <img src="http://portal.arhabs.com/images/project/project004.png" class="img-fluid" alt="">
+              <img src="assets/img/project004.png" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="http://portal.arhabs.com/images/project/project004.png" data-gallery="portfolioGallery"
+                <a href="img/project004.png" data-gallery="portfolioGallery"
                   class="portfolio-lightbox" title="Web Application"><i class="bx bx-plus"></i></a>
 
               </div>
@@ -448,9 +448,9 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
-              <img src="http://portal.arhabs.com/images/project/project005.png" class="img-fluid" alt="">
+              <img src="assets/img/project005.png" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="http://portal.arhabs.com/images/project/project005.png" data-gallery="portfolioGallery"
+                <a href="img/project005.png" data-gallery="portfolioGallery"
                   class="portfolio-lightbox" title="Web Application"><i class="bx bx-plus"></i></a>
 
               </div>
@@ -459,9 +459,9 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="http://portal.arhabs.com/images/project/project006.png" class="img-fluid" alt="">
+              <img src="assets/img/project006.png" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="http://portal.arhabs.com/images/project/project006.png" data-gallery="portfolioGallery"
+                <a href="img/project006.png" data-gallery="portfolioGallery"
                   class="portfolio-lightbox" title="Web Application"><i class="bx bx-plus"></i></a>
 
               </div>
@@ -470,9 +470,9 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
-              <img src="http://portal.arhabs.com/images/project/project007.png" class="img-fluid" alt="">
+              <img src="assets/img/project007.png" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="http://portal.arhabs.com/images/project/project007.png" data-gallery="portfolioGallery"
+                <a href="img/project007.png" data-gallery="portfolioGallery"
                   class="portfolio-lightbox" title="Web Application"><i class="bx bx-plus"></i></a>
 
               </div>
@@ -481,9 +481,9 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
-              <img src="http://portal.arhabs.com/images/project/project008.png" class="img-fluid" alt="">
+              <img src="assets/img/project008.png" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="http://portal.arhabs.com/images/project/project008.png" data-gallery="portfolioGallery"
+                <a href="img/project008.png" data-gallery="portfolioGallery"
                   class="portfolio-lightbox" title="Web Application"><i class="bx bx-plus"></i></a>
 
               </div>
@@ -492,9 +492,9 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
-              <img src="http://portal.arhabs.com/images/project/project009.png" class="img-fluid" alt="">
+              <img src="assets/img/project009.png" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="http://portal.arhabs.com/images/project/project009.png" data-gallery="portfolioGallery"
+                <a href="img/project009.png" data-gallery="portfolioGallery"
                   class="portfolio-lightbox" title="Web Application"><i class="bx bx-plus"></i></a>
 
               </div>
@@ -503,9 +503,9 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
-              <img src="http://portal.arhabs.com/images/project/project010.png" class="img-fluid" alt="">
+              <img src="assets/img/project010.png" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="http://portal.arhabs.com/images/project/project010.png" data-gallery="portfolioGallery"
+                <a href="img/project010.png" data-gallery="portfolioGallery"
                   class="portfolio-lightbox" title="Web Application"><i class="bx bx-plus"></i></a>
 
               </div>
@@ -514,9 +514,9 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
-              <img src="http://portal.arhabs.com/images/project/project011.png" class="img-fluid" alt="">
+              <img src="assets/img/project011.png" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="http://portal.arhabs.com/images/project/project011.png" data-gallery="portfolioGallery"
+                <a href="img/project011.png" data-gallery="portfolioGallery"
                   class="portfolio-lightbox" title="Web Application"><i class="bx bx-plus"></i></a>
 
               </div>
@@ -525,9 +525,9 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
-              <img src="http://portal.arhabs.com/images/project/project012.png" class="img-fluid" alt="">
+              <img src="assets/img/project012.png" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="http://portal.arhabs.com/images/project/project012.png" data-gallery="portfolioGallery"
+                <a href="img/project012.png" data-gallery="portfolioGallery"
                   class="portfolio-lightbox" title="Web Application"><i class="bx bx-plus"></i></a>
 
               </div>
@@ -537,9 +537,9 @@
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-app">
           <div class="portfolio-wrap">
-            <img src="http://portal.arhabs.com/images/project/project013.png" class="img-fluid" alt="">
+            <img src="assets/img/project013.png" class="img-fluid" alt="">
             <div class="portfolio-links">
-              <a href="http://portal.arhabs.com/images/project/project013.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
+              <a href="img/project013.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
                 title="Web Application"><i class="bx bx-plus"></i></a>
 
             </div>
@@ -548,9 +548,9 @@
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-web">
           <div class="portfolio-wrap">
-            <img src="http://portal.arhabs.com/images/project/project014.png" class="img-fluid" alt="">
+            <img src="assets/img/project014.png" class="img-fluid" alt="">
             <div class="portfolio-links">
-              <a href="http://portal.arhabs.com/images/project/project014.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
+              <a href="img/project014.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
                 title="Web Application"><i class="bx bx-plus"></i></a>
 
             </div>
@@ -779,14 +779,9 @@
   <footer id="footer">
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>2023</span></strong>
+        &copy; Copyright <strong><span>2024</span></strong>
       </div>
       <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/iportfolio-bootstrap-portfolio-websites-template/ -->
-        Designed by <a href="https://bootstrapmade.com/">Arhabs</a>
       </div>
     </div>
   </footer><!-- End  Footer -->
