--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
         <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Abdul Basit</a></h1>
         <div class="social-links mt-3 text-center">
-          <a href="https://www.twitter.com/meabdulbasitmangral/" class="twitter"><i class="bx bxl-twitter"></i></a>
-          <a href="https://www.facebook.com/meabdulbasitmangral" class="facebook"><i class="bx bxl-facebook"></i></a>
-          <a href="https://www.instagram.com/meabdulbasitmangral" class="instagram"><i class="bx bxl-instagram"></i></a>
-          <a href="https://www.linkedin.com/in/abdul-basit-3278101b2" class="linkedin"><i
+          <a href="https://www.twitter.com/abdulbasit__pk/" class="twitter"><i class="bx bxl-twitter"></i></a>
+          <a href="https://www.facebook.com/basitabdulpk" class="facebook"><i class="bx bxl-facebook"></i></a>
+          <a href="https://www.instagram.com/abdulbasit__pk" class="instagram"><i class="bx bxl-instagram"></i></a>
+          <a href="https://www.linkedin.com/in/abdulbasit-03028952654" class="linkedin"><i
               class="bx bxl-linkedin"></i></a>
         </div>
       </div>
