--- a/history.html
+++ b/history.html
@@ -322,7 +322,7 @@
                             class="art-link art-color-link art-w-chevron">See Projects</a>
                         </div>
                         <!-- popup -->
-                        <div class="art-recomendation-popup" style="display: none;" id="WisemanInnovations">
+                        <div class="art-recomendation-popup" style="display: none; width: 100%;" id="WisemanInnovations">
 
                           <!-- testimonial -->
                           <div class="art-a art-testimonial">
@@ -371,7 +371,7 @@
                         </div>
 
                         <!-- popup -->
-                        <div class="art-recomendation-popup" style="display: none;" id="APPINSNAP">
+                        <div class="art-recomendation-popup" style="display: none; width: 100%;" id="APPINSNAP">
 
                           <!-- testimonial -->
                           <div class="art-a art-testimonial">
@@ -423,7 +423,7 @@
                         </div>
 
                         <!-- popup -->
-                        <div class="art-recomendation-popup" style="display: none;" id="CIMS">
+                        <div class="art-recomendation-popup" style="display: none; width: 100%;" id="CIMS">
 
                           <!-- testimonial -->
                           <div class="art-a art-testimonial">
@@ -474,7 +474,7 @@
                         </div>
 
                         <!-- popup -->
-                        <div class="art-recomendation-popup" style="display: none;" id="CIMS">
+                        <div class="art-recomendation-popup" style="display: none; width: 100%;" id="CIMS">
 
                           <!-- testimonial -->
                           <div class="art-a art-testimonial">
