--- a/portfolio.html
+++ b/portfolio.html
@@ -238,18 +238,18 @@
             </div>
             <!-- scroll frame end -->
 
-            <!-- sidebar social -->
-            <div class="art-ls-social">
-              <!-- social link -->
-              <a href="https://www.linkedin.com/in/abdul-basit-3278101b2" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-              <!-- social link -->
-              <a href="https://www.facebook.com/meabdulbasitmangral" target="_blank"><i class="fab fa-facebook"></i></a>
-              <!-- social link -->
-              <a href="https://www.instagram.com/meabdulbasitmangral" target="_blank"><i class="fab fa-instagram"></i></a>
-              <!-- social link -->
-              <a href="https://www.twitter.com/meabdulbasitmangral/" target="_blank"><i class="fab fa-twitter"></i></a>
-            </div>
-            <!-- sidebar social end -->
+           <!-- sidebar social -->
+           <div class="art-ls-social">
+            <!-- social link -->
+            <a href="https://www.linkedin.com/in/abdulbasitmangral" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+            <!-- social link -->
+            <a href="https://www.facebook.com/basitabdulpk" target="_blank"><i class="fab fa-facebook"></i></a>
+            <!-- social link -->
+            <a href="https://www.instagram.com/abdulbasit__pk" target="_blank"><i class="fab fa-instagram"></i></a>
+            <!-- social link -->
+            <a href="https://www.instagram.com/abdulbasit__pk" target="_blank"><i class="fab fa-twitter"></i></a>
+          </div>
+          <!-- sidebar social end -->
 
           </div>
           <!-- menu bar frame end -->
