--- a/blog.html
+++ b/blog.html
@@ -566,29 +566,27 @@
 
                 <!-- row -->
                 <div class="row">
-
                   <!-- col -->
-                  <div class="col-lg-12">
-
-                    <!-- pagination -->
-                    <div class="art-a art-pagination">
-                      <!-- button -->
-                      <a href="blog-2-col.html"
-                        class="art-link art-color-link art-w-chevron art-left-link"><span>Previous page</span></a>
-                      <div class="art-pagination-center art-m-hidden">
-                        <a href="blog-2-col.html"></a>
-                        <a href="blog-2-col.html">1</a>
-                        <a class="art-active-pag" href="blog-2-col.html">2</a>
-                        <a href="blog-2-col.html">3</a>
-                        <a href="blog-2-col.html">...</a>
-                      </div>
-                      <!-- button -->
-                      <a href="blog-2-col.html" class="art-link art-color-link art-w-chevron"><span>Next page</span></a>
-                    </div>
-                    <!-- pagination end -->
-
+                  <div class="col-6 col-lg-4">
+                    <!-- brand -->
+                    <img class="art-brand" src="img/brands/3.png" alt="brand" style="width: 50%;">
                   </div>
                   <!-- col end -->
+                  <!-- col -->
+                  <div class="col-6 col-lg-4">
+                    <!-- brand -->
+                    <img class="art-brand" src="img/brands/1.png" alt="brand" style="width: 50%;">
+                  </div>
+                  <!-- col end -->
+
+                  <!-- col -->
+                  <div class="col-6 col-lg-4">
+                    <!-- brand -->
+                    <img class="art-brand" src="img/brands/2.png" alt="brand" style="width: 50%;">
+                  </div>
+                  <!-- col end -->
+
+
 
                 </div>
                 <!-- row end -->
