--- a/home.html
+++ b/home.html
@@ -918,34 +918,27 @@
 
                 <!-- row -->
                 <div class="row">
-
                   <!-- col -->
-                  <div class="col-6 col-lg-3">
+                  <div class="col-6 col-lg-4">
                     <!-- brand -->
-                    <img class="art-brand" src="img/brands/1.png" alt="brand">
+                    <img class="art-brand" src="img/brands/3.png" alt="brand" style="width: 50%;">
+                  </div>
+                  <!-- col end -->
+                  <!-- col -->
+                  <div class="col-6 col-lg-4">
+                    <!-- brand -->
+                    <img class="art-brand" src="img/brands/1.png" alt="brand" style="width: 50%;">
                   </div>
                   <!-- col end -->
 
                   <!-- col -->
-                  <div class="col-6 col-lg-3">
+                  <div class="col-6 col-lg-4">
                     <!-- brand -->
-                    <img class="art-brand" src="img/brands/2.png" alt="brand">
+                    <img class="art-brand" src="img/brands/2.png" alt="brand" style="width: 50%;">
                   </div>
                   <!-- col end -->
 
-                  <!-- col -->
-                  <div class="col-6 col-lg-3">
-                    <!-- brand -->
-                    <img class="art-brand" src="img/brands/3.png" alt="brand">
-                  </div>
-                  <!-- col end -->
 
-                  <!-- col -->
-                  <div class="col-6 col-lg-3">
-                    <!-- brand -->
-                    <img class="art-brand" src="img/brands/1.png" alt="brand">
-                  </div>
-                  <!-- col end -->
 
                 </div>
                 <!-- row end -->
