--- a/history.html
+++ b/history.html
@@ -328,7 +328,7 @@
                             <div class="testimonial-body">
                               <!-- name -->
                               <h5>Working on These Projects</h5>
-                              <div class="art-el-suptitle mb-15">
+                              <div class="art-el-suptitle">
                                 <ul>
                                   <li>360 Ribbon Extension</li>
                                   <li>360 Ribbon Adoption Portal</li>
@@ -377,7 +377,7 @@
                             <div class="testimonial-body">
                               <!-- name -->
                               <h5>Worked on These Projects</h5>
-                              <div class="art-el-suptitle mb-15">
+                              <div class="art-el-suptitle">
                                 <ul>
                                   <li>Pakistan Coast Guards</li>
                                   <li>FC South Baluchistan</li>
@@ -429,7 +429,7 @@
                             <div class="testimonial-body">
                               <!-- name -->
                               <h5>Teached Following Subject</h5>
-                              <div class="art-el-suptitle mb-15">
+                              <div class="art-el-suptitle">
                                 <ul>
                                   <li>Programming Fundamentals.</li>
                                   <li> Object Oriented Programming.</li>
@@ -480,7 +480,7 @@
                             <div class="testimonial-body">
                               <!-- name -->
                               <h5>Worked on These Projects</h5>
-                              <div class="art-el-suptitle mb-15">
+                              <div class="art-el-suptitle">
                                 <ul>
                                   <li>E-Commerce: website on Drone. (PHP)</li>
                                   <li>Restaurant Management System (ASP.net)</li>
