--- a/contact.html
+++ b/contact.html
@@ -301,20 +301,20 @@
                   </div>
                   <!-- col end -->
                   <!-- col -->
-                  <div class="col-12 col-xl-4">
+                  <div class="col-12 col-xl-6">
                     <!-- contact card -->
                     <div class="art-a art-card">
                       <div class="art-table p-15-15">
                         <ul>
                           <li>
-                            <h6>Country:</h6><span>Canada</span>
+                            <h6>Country:</h6><span>Pakistan</span>
                           </li>
                           <li>
-                            <h6>City:</h6><span>Toronto</span>
+                            <h6>City:</h6><span>Islamabad</span>
                           </li>
 
                           <li>
-                            <h6>Streat:</h6><span>20 Dellbank Rd</span>
+                            <h6>Streat:</h6><span>Shadaab Colony, Thandapani</span>
                           </li>
                         </ul>
                       </div>
@@ -323,46 +323,24 @@
                   </div>
                   <!-- col end -->
                   <!-- col -->
-                  <div class="col-12 col-xl-4">
+                  <div class="col-12 col-xl-6">
                     <!-- contact card -->
                     <div class="art-a art-card">
                       <div class="art-table p-15-15">
                         <ul>
                           <li>
-                            <h6>Email:</h6><span>carter.inbox@mail.com</span>
+                            <h6>Email:</h6><span>abdulbasitmangral@gmail.com</span>
                           </li>
                           <li>
-                            <h6>Telegram:</h6><span>@arter</span>
+                            <h6>Contact:</h6><span>(+92) 302 8952654</span>
                           </li>
                           <li>
-                            <h6>Skype:</h6><span>Arter</span>
+                            <h6>Teams:</h6><span>abdulbasitmangral@gmail.com</span>
                           </li>
                         </ul>
                       </div>
                     </div>
                     <!-- contact card end -->
-                  </div>
-                  <!-- col end -->
-                  <!-- col -->
-                  <div class="col-12 col-xl-4">
-                    <!-- contact card -->
-                    <div class="art-a art-card">
-                      <div class="art-table p-15-15">
-                        <ul>
-                          <li>
-                            <h6>Support service:</h6><span>+78 (098) 333 11 22</span>
-                          </li>
-                          <li>
-                            <h6>Office:</h6><span>+78 (098) 326 11 22</span>
-                          </li>
-                          <li>
-                            <h6>Personal:</h6><span>+78 (077) 114 26 53</span>
-                          </li>
-                        </ul>
-                      </div>
-                    </div>
-                    <!-- contact card end -->
-
                   </div>
                   <!-- col end -->
 
@@ -511,34 +489,18 @@
 
               <!-- menu -->
               <nav id="swupMenu">
-                 <!-- menu list -->
-                 <ul class="main-menu">
+                <!-- menu list -->
+                <ul class="main-menu">
                   <!-- menu item -->
-                  <li class="menu-item current-menu-item"><a href="home.html">Home</a></li>
+                  <li class="menu-item"><a href="home.html">Home</a></li>
                   <!-- menu item -->
-                  <li class="menu-item menu-item-has-children">
-                    <a href="#" data-no-swup>Portfolio</a>
-                    <!-- sub menu -->
-                    <ul class="sub-menu">
-                      <!-- lvl 2 nav link -->
-                      <li class="menu-item"><a href="portfolio.html">Portfolio</a></li>
-                    </ul>
-                    <!-- sub menu end -->
-                  </li>
+                  <li class="menu-item"><a href="portfolio.html">Portfolio</a></li>
                   <!-- menu item -->
                   <li class="menu-item"><a href="history.html">History</a></li>
                   <!-- menu item -->
-                  <li class="menu-item"><a href="contact.html">Contact</a></li>
+                  <li class="menu-item current-menu-item" current-menu-item><a href="contact.html">Contact</a></li>
                   <!-- menu item -->
-                  <li class="menu-item menu-item-has-children">
-                    <a href="#" data-no-swup>Blog</a>
-                    <!-- sub menu -->
-                    <ul class="sub-menu">
-                      <!-- lvl 2 nav link -->
-                      <li class="menu-item"><a href="blog.html">Blog</a></li>
-                    </ul>
-                    <!-- sub menu end -->
-                  </li>
+                  <li class="menu-item"><a href="blog.html">Blog</a></li>
                 </ul>
                 <!-- menu list end -->
               </nav>
