--- a/history.html
+++ b/history.html
@@ -672,39 +672,23 @@
                 <div class="art-scroll-frame">
 
                   <!-- menu -->
-                  <nav id="swupMenu">
-                     <!-- menu list -->
+              <nav id="swupMenu">
+                <!-- menu list -->
                 <ul class="main-menu">
                   <!-- menu item -->
-                  <li class="menu-item current-menu-item"><a href="home.html">Home</a></li>
+                  <li class="menu-item"><a href="home.html">Home</a></li>
                   <!-- menu item -->
-                  <li class="menu-item menu-item-has-children">
-                    <a href="#" data-no-swup>Portfolio</a>
-                    <!-- sub menu -->
-                    <ul class="sub-menu">
-                      <!-- lvl 2 nav link -->
-                      <li class="menu-item"><a href="portfolio.html">Portfolio</a></li>
-                    </ul>
-                    <!-- sub menu end -->
-                  </li>
+                  <li class="menu-item"><a href="portfolio.html">Portfolio</a></li>
                   <!-- menu item -->
-                  <li class="menu-item"><a href="history.html">History</a></li>
+                  <li class="menu-item current-menu-item"><a href="history.html">History</a></li>
                   <!-- menu item -->
                   <li class="menu-item"><a href="contact.html">Contact</a></li>
                   <!-- menu item -->
-                  <li class="menu-item menu-item-has-children">
-                    <a href="#" data-no-swup>Blog</a>
-                    <!-- sub menu -->
-                    <ul class="sub-menu">
-                      <!-- lvl 2 nav link -->
-                      <li class="menu-item"><a href="blog.html">Blog</a></li>
-                    </ul>
-                    <!-- sub menu end -->
-                  </li>
+                  <li class="menu-item"><a href="blog.html">Blog</a></li>
                 </ul>
                 <!-- menu list end -->
-                  </nav>
-                  <!-- menu end -->
+              </nav>
+              <!-- menu end -->
 
                 </div>
                 <!-- scroll frame end -->
