--- a/home.html
+++ b/home.html
@@ -305,7 +305,7 @@
                           </div>
                           <div class="art-buttons-frame">
                             <!-- button -->
-                            <a href="portfolio-3-col-masonry.html" class="art-btn art-btn-md"><span>Explore
+                            <a href="contact.html" class="art-btn art-btn-md"><span>Contact
                                 now</span></a>
                           </div>
                         </div>
