--- a/history.html
+++ b/history.html
@@ -62,7 +62,7 @@
               <!-- avatar -->
               <div class="art-avatar">
                 <a data-fancybox="avatar" data-no-swup href="img/face-1.jpg" class="art-avatar-curtain">
-                  <img src="img/apple-touch-icon.png" alt="avatar">
+                  <img src="img/profile-img.jpg" alt="avatar">
                   <i class="fas fa-expand"></i>
                 </a>
                 <!-- available -->
