--- a/blog.html
+++ b/blog.html
@@ -291,15 +291,8 @@
                     <!-- filter -->
                     <div class="art-filter mb-30">
                       <!-- filter link -->
-                      <a href="#" data-filter="*" class="art-link art-current">All Categories</a>
+                      <p>My Blogs</p>
                       <!-- filter link -->
-                      <a href="#" data-filter=".webTemplates" class="art-link">Web Templates</a>
-                      <!-- filter link -->
-                      <a href="#" data-filter=".logos" class="art-link">Logos</a>
-                      <!-- filter link -->
-                      <a href="#" data-filter=".drawings" class="art-link">Drawings</a>
-                      <!-- filter link -->
-                      <a href="#" data-filter=".ui" class="art-link">UI Elements</a>
                     </div>
                     <!-- filter end -->
 
